--- a/demo-config/src/main/resources/application.yml
+++ b/demo-config/src/main/resources/application.yml
@@ -5,8 +5,8 @@ spring:
     config:
       server:
         git:
-          uri: https://github.com/enriquecamejo/garbanzo.git/porotos/
+          uri: https://github.com/enriquecamejo/garbanzo.git/
           #uri: https://github.com/srast3/spring-kafka-microservice.git/
-        #  search-paths:
-             # - "porotos"
+          search-paths:
+              - "demo-properties"
          #    - "EmailServiceConfigProperties"
