--- a/demo-micro1/src/main/resources/application.yml
+++ b/demo-micro1/src/main/resources/application.yml
@@ -4,9 +4,5 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
     register-with-eureka: true
 
-server:
-  port: 8081
-  
-spring:
-  application:
-    name: micro1
+solucion:
+  id: 123
