--- a/demo-properties/micro1/micro1.yml
+++ b/demo-properties/micro1/micro1.yml
@@ -1,5 +1,8 @@
-security:
-  basic:
-    enabled: false
-solucion:
-  id: 1234
+solucion_1:
+  tipo: orquestacion
+  pasos: "conectorentrada;transformacion_mayusculas;conectorsalida"
+ 
+solucion_2:
+  tipo: orquestacion
+  pasos: "conectorentrada;transformacion_mayusculas;conectorsalida"
+ 
