--- a/demo-properties/micro1/micro1.yml
+++ b/demo-properties/micro1/micro1.yml
@@ -3,6 +3,6 @@ solucion_1:
   pasos: "conectorentrada;transformacion_mayusculas;conectorsalida"
  
 solucion_2:
-  tipo: orquestacion
+  tipo: coreografia
   pasos: "conectorentrada;transformacion_mayusculas;conectorsalida"
  
