--- a/conector1/conector1.yml
+++ b/conector1/conector1.yml
@@ -11,3 +11,5 @@ spring:
           destination: conector1MessagesS1
           consumer:
             maxAttempts: 1
+logging:
+  config: ${configserver.discovered.uri}/logback/default/logback-spring.xml?useDefaultLabel
