--- a/conector1/conector1.yml
+++ b/conector1/conector1.yml
@@ -11,3 +11,12 @@ spring:
           destination: conector1MessagesS1
           consumer:
             maxAttempts: 1
+        conector1MessagesErrorChannel:
+          destination: conector1MessagesErrorS1
+          consumer:
+            maxAttempts: 1    
+ 
+solucion:
+  tipoComunicacion:
+    s1: one-way
+    s2: req-resp
