--- a/conector2/conector2.yml
+++ b/conector2/conector2.yml
@@ -23,3 +23,6 @@ solucion:
   tipoComunicacion:
     s1: one-way
     s2: req-resp
+    
+logging:
+  config: ${configserver.discovered.uri}/logback/default/master/logback-spring.xml
