--- a/transformacion/transformacion.yml
+++ b/transformacion/transformacion.yml
@@ -33,6 +33,12 @@ transformacion:
       paso3: xslt/minuscula.xsl
       paso4: xslt/mayuscula.xsl
       paso5: xslt/minuscula.xsl
+    s2:
+      paso1: xslt/minuscula.xsl
+      paso2: xslt/mayuscula.xsl
+      paso3: xslt/minuscula.xsl
+      paso4: xslt/mayuscula.xsl
+      paso5: xslt/minuscula.xsl
       
 solucion:
   tipoComunicacion:
