--- a/conector2/conector2.yml
+++ b/conector2/conector2.yml
@@ -20,9 +20,12 @@ spring:
             
             
 solucion:
-  tipoComunicacion:
-    s1: one-way
-    s2: req-resp
+  s1: 
+    tipoComunicacion: one-way
+  s2:
+    tipoComunicacion: req-resp
+    clienteURL: http://localhost:9000/respuestaSolicitud
+  
     
 logging:
   config: ${configserver.discovered.uri}/logback/default/master/logback-spring.xml
