--- a/transformacion1/transformacion1.yml
+++ b/transformacion1/transformacion1.yml
@@ -7,15 +7,29 @@ spring:
   cloud:
     stream:
       bindings:
-        input:
+        transformacionSubscribableChannel:
           destination: conector1MessagesS1
           group: transformacionesPaso1IntakeGroupS1
           consumer:
             maxAttempts: 1
-        output:
+        transformacionMessagesChannel:
           destination: transformacionPaso1MessagesS1
           consumer:
             maxAttempts: 1
+        transformacionMessagesChannelErrores:
+          destination: conector1MessagesErrorS1
+          consumer:
+            maxAttempts: 1    
+      
+#        input:
+#          destination: conector1MessagesS1
+#          group: transformacionesPaso1IntakeGroupS1
+#          consumer:
+#            maxAttempts: 1
+#        output:
+#          destination: transformacionPaso1MessagesS1
+#          consumer:
+#            maxAttempts: 1
 
 transformacion: 
   xslt:
