--- a/transformacion2/transformacion2.yml
+++ b/transformacion2/transformacion2.yml
@@ -7,15 +7,29 @@ spring:
   cloud:
     stream:
       bindings:
-        input:
+        transformacionSubscribableChannel:
           destination: transformacionPaso1MessagesS1
           group: transformacionesPaso2IntakeGroupS1
           consumer:
             maxAttempts: 1
-        output:
+        transformacionMessagesChannel:
           destination: transformacionPaso2MessagesS1
           consumer:
             maxAttempts: 1
+        transformacionMessagesChannelErrores:
+          destination: conector1MessagesErrorS1
+          consumer:
+            maxAttempts: 1 
+            
+#        input:
+#          destination: transformacionPaso1MessagesS1
+#          group: transformacionesPaso2IntakeGroupS1
+#          consumer:
+#            maxAttempts: 1
+#        output:
+#          destination: transformacionPaso2MessagesS1
+#          consumer:
+#            maxAttempts: 1
 
 transformacion: 
   xslt:
