--- a/transformacion3/transformacion3.yml
+++ b/transformacion3/transformacion3.yml
@@ -7,15 +7,29 @@ spring:
   cloud:
     stream:
       bindings:
-        input:
+        transformacionSubscribableChannel:
           destination: transformacionPaso2MessagesS1
           group: transformacionesPaso3IntakeGroupS1
           consumer:
             maxAttempts: 1
-        output:
+        transformacionMessagesChannel:
           destination: transformacionPaso3MessagesS1
           consumer:
             maxAttempts: 1
+        transformacionMessagesChannelErrores:
+          destination: conector1MessagesErrorS1
+          consumer:
+            maxAttempts: 1 
+            
+#        input:
+#          destination: transformacionPaso2MessagesS1
+#          group: transformacionesPaso3IntakeGroupS1
+#          consumer:
+#            maxAttempts: 1
+#        output:
+#          destination: transformacionPaso3MessagesS1
+#          consumer:
+#            maxAttempts: 1
 
 
 
