--- a/transformacion4/transformacion4.yml
+++ b/transformacion4/transformacion4.yml
@@ -7,15 +7,29 @@ spring:
   cloud:
     stream:
       bindings:
-        input:
+        transformacionSubscribableChannel:
           destination: transformacionPaso3MessagesS1
           group: transformacionesPaso4IntakeGroupS1
           consumer:
             maxAttempts: 1
-        output:
+        transformacionMessagesChannel:
           destination: transformacionPaso4MessagesS1
           consumer:
             maxAttempts: 1
+        transformacionMessagesChannelErrores:
+          destination: conector1MessagesErrorS1
+          consumer:
+            maxAttempts: 1 
+            
+#        input:
+#          destination: transformacionPaso3MessagesS1
+#          group: transformacionesPaso4IntakeGroupS1
+#          consumer:
+#            maxAttempts: 1
+#        output:
+#          destination: transformacionPaso4MessagesS1
+#          consumer:
+#            maxAttempts: 1
 
 transformacion: 
   xslt:
