--- a/transformacion5/transformacion5.yml
+++ b/transformacion5/transformacion5.yml
@@ -7,15 +7,29 @@ spring:
   cloud:
     stream:
       bindings:
-        input:
+        transformacionSubscribableChannel:
           destination: transformacionPaso4MessagesS1
           group: transformacionesPaso5IntakeGroupS1
           consumer:
             maxAttempts: 1
-        output:
+        transformacionMessagesChannel:
           destination: transformacionMessagesFinalS1
           consumer:
             maxAttempts: 1
+        transformacionMessagesChannelErrores:
+          destination: conector1MessagesErrorS1
+          consumer:
+            maxAttempts: 1 
+      
+#        input:
+#          destination: transformacionPaso4MessagesS1
+#          group: transformacionesPaso5IntakeGroupS1
+#          consumer:
+#            maxAttempts: 1
+#        output:
+#          destination: transformacionMessagesFinalS1
+#          consumer:
+#            maxAttempts: 1
 
 transformacion: 
   xslt:
