--- a/transformacion3/transformacion3.yml
+++ b/transformacion3/transformacion3.yml
@@ -41,6 +41,12 @@ transformacion:
       paso3: xslt/minuscula.xsl
       paso4: xslt/mayuscula.xsl
       paso5: xslt/minuscula.xsl
+    s2:
+      paso1: xslt/minuscula.xsl
+      paso2: xslt/mayuscula.xsl
+      paso3: xslt/minuscula.xsl
+      paso4: xslt/mayuscula.xsl
+      paso5: xslt/minuscula.xsl
 solucion:
   s1: 
     tipoComunicacion: one-way
