--- a/conector1/conector1.yml
+++ b/conector1/conector1.yml
@@ -16,7 +16,7 @@ spring:
           consumer:
             maxAttempts: 1
         replayChannel:
-          destination: transformacionMessagesFinalS1
+          destination: replayChannel
           group: conector1IntakeGroupS1Replays
           consumer:
             maxAttempts: 1    
