--- a/transformacion/transformacion.yml
+++ b/transformacion/transformacion.yml
@@ -16,7 +16,7 @@ spring:
           consumer:
             maxAttempts: 1
         transformacionMessagesChannel:
-          destination: transformacionMessagesFinalS1
+          destination: replayChannel
           consumer:
             maxAttempts: 1
         transformacionMessagesChannelErrores:
