--- a/conector1/conector1.yml
+++ b/conector1/conector1.yml
@@ -16,6 +16,7 @@ spring:
           consumer:
             maxAttempts: 1
         replayChannel:
+          contentType: application/xml
           destination: replayChannel
           group: conector1IntakeGroupS1Replays
           consumer:
