Agregar property para comunicacion con cliente SOAP

--- a/conector2/conector2.yml
+++ b/conector2/conector2.yml
@@ -17,6 +17,10 @@ spring:
           consumer:
             maxAttempts: 1
             
+conectorSalida:
+  s2:
+    clienteWSDL: http://localhost:8080/cliente2/services/ServicioPersona?wsdl
+    requestParam1:  ci
             
 solucion:
   s1: 
