Agregar exchange y queue para las respuestas del cliente final

--- a/conector2/conector2.yml
+++ b/conector2/conector2.yml
@@ -16,6 +16,10 @@ spring:
           destination: replayChannel
           consumer:
             maxAttempts: 1
+        conector2ReplyChannel:
+          destination: conector2Replay
+          consumer:
+            maxAttempts: 1
             
 conectorSalida:
   s2:
