--- a/transformacion/transformacion.yml
+++ b/transformacion/transformacion.yml
@@ -22,7 +22,12 @@ spring:
         transformacionMessagesChannelErrores:
           destination: replayChannel
           consumer:
-            maxAttempts: 1    
+            maxAttempts: 1
+        transformacionReplySubscribableChannel:
+          destination: conector2Replay
+          group: transformacionesReplyPaso2IntakeGroup
+          consumer:
+            maxAttempts: 1
 
 
 transformacion: 
