--- a/transformacion/transformacion.yml
+++ b/transformacion/transformacion.yml
@@ -1,33 +1,33 @@
-#server:
-#  port: 8081
-
 spring:
   rabbitmq:
     host: localhost
     port: 5672
     username: guest
-    password: guest
+    password: guest          
   cloud:
     stream:
       bindings:
         transformacionSubscribableChannel:
           destination: conector1MessagesS1
           group: transformacionesPaso5IntakeGroupS1
+          #group: transformacionesPaso1IntakeGroupS1
           consumer:
             maxAttempts: 1
         transformacionMessagesChannel:
           destination: transformacionMessagesFinalS1
+          #destination: transformacionMessagesConector2S1
           consumer:
             maxAttempts: 1
         transformacionMessagesChannelErrores:
           destination: replayChannel
           consumer:
             maxAttempts: 1
-        transformacionReplySubscribableChannel:
-          destination: conector2Replay
-          group: transformacionesReplyPaso2IntakeGroup
-          consumer:
-            maxAttempts: 1
+#        transformacionReplySubscribableChannel:
+#          destination: conector2Replay
+#          group: transformacionesReplyPasoNIntakeGroup
+#          consumer:
+#            maxAttempts: 1
+      
 
 
 transformacion: 
@@ -44,13 +44,11 @@ transformacion:
       paso3: xslt/minuscula.xsl
       paso4: xslt/mayuscula.xsl
       paso5: xslt/minuscula.xsl
-      
-          
 solucion:
   s1: 
     tipoComunicacion: one-way
   s2:
     tipoComunicacion: req-resp
-      
+          
 logging:
   config: ${configserver.discovered.uri}/logback/default/master/logback-spring.xml
