se agregan soluciones con tipo orquestacion

--- a/conectorEntrada/conectorEntrada.yml
+++ b/conectorEntrada/conectorEntrada.yml
@@ -20,10 +20,10 @@ spring:
 solucion:
   s1: 
     tipoComunicacion: one-way
-    tipoComposicion: coreografia
+    tipoComposicion: orquestacion
   s2:
     tipoComunicacion: req-resp
-    tipoComposicion: coreografia
+    tipoComposicion: orquestacion
     
 logging:
   config: ${configserver.discovered.uri}/logback/default/master/logback-spring.xml
