--- a/application-soluciones.properties
+++ b/application-soluciones.properties
@@ -1,10 +1,10 @@
-solucion:
-  s1: 
-    tipoComunicacion: one-way
-    tipoComposicion: orquestacion
-  s2:
-    tipoComunicacion: req-resp
-    tipoComposicion: orquestacion
+#solucion:
+#  s1: 
+#    tipoComunicacion: one-way
+#    tipoComposicion: orquestacion
+#  s2:
+#    tipoComunicacion: req-resp
+#    tipoComposicion: orquestacion
 transformacion: 
   xslt:
     s1:
