--- a/transformacion/transformacion.yml
+++ b/transformacion/transformacion.yml
@@ -30,20 +30,20 @@ spring:
       
 
 
-#transformacion: 
-#  xslt:
-#    s1:
-#      paso1: xslt/minuscula.xsl
-#      paso2: xslt/mayuscula.xsl
-#      paso3: xslt/minuscula.xsl
-#      paso4: xslt/mayuscula.xsl
-#      paso5: xslt/minuscula.xsl
-#    s2:
-#      paso1: xslt/minuscula.xsl
-#      paso2: xslt/mayuscula.xsl
-#      paso3: xslt/minuscula.xsl
-#      paso4: xslt/mayuscula.xsl
-#      paso5: xslt/minuscula.xsl
+transformacion: 
+  xslt:
+    s1:
+      paso1: xslt/minuscula.xsl
+      paso2: xslt/mayuscula.xsl
+      paso3: xslt/minuscula.xsl
+      paso4: xslt/mayuscula.xsl
+      paso5: xslt/minuscula.xsl
+    s2:
+      paso1: xslt/minuscula.xsl
+      paso2: xslt/mayuscula.xsl
+      paso3: xslt/minuscula.xsl
+      paso4: xslt/mayuscula.xsl
+      paso5: xslt/minuscula.xsl
 solucion:
   s1: 
     tipoComunicacion: one-way
