--- a/conectorEntrada/conectorEntrada.yml
+++ b/conectorEntrada/conectorEntrada.yml
@@ -8,12 +8,12 @@ spring:
     stream:
       bindings:
         conector1MessagesChannel:
-          destination: conector1MessagesS1
+          destination: conector1Messages
           consumer:
             maxAttempts: 1
         replayChannel:
           destination: replayChannel
-          group: conector1IntakeGroupS1Replays
+          group: conector1QueueReplays
           consumer:
             maxAttempts: 1    
      
