--- a/conectorEntrada/conectorEntrada-docker.yml
+++ b/conectorEntrada/conectorEntrada-docker.yml
@@ -8,14 +8,14 @@ spring:
     stream:
       bindings:
         conector1MessagesChannel:
-          destination: conector1MessagesS1
+          destination: conector1Messages
           consumer:
             maxAttempts: 1
         replayChannel:
           destination: replayChannel
-          group: conector1IntakeGroupS1Replays
+          group: conector1QueueReplays
           consumer:
-            maxAttempts: 1    
+            maxAttempts: 1   
      
 solucion:
   s1: 
