--- a/transformacionxmljson/transformacionxmljson-docker.yml
+++ b/transformacionxmljson/transformacionxmljson-docker.yml
@@ -4,6 +4,18 @@ spring:
     port: 5672
     username: guest
     password: guest
+  cloud:
+    stream:
+      bindings:
+        transformacionSubscribableChannel:
+          destination: conectorSalidaMessages
+          group: transformacionxmljsonQueue
+          consumer:
+            maxAttempts: 1
+        transformacionMessagesChannel:
+          destination: replayMessages
+          consumer:
+            maxAttempts: 1
                     
 logging:
   config: ${configserver.discovered.uri}/logback/default/master/logback-spring.xml
