conector de entrada y enriquecedor config cambios

--- a/conectorEntrada/conectorEntrada-docker.yml
+++ b/conectorEntrada/conectorEntrada-docker.yml
@@ -19,10 +19,8 @@ spring:
      
 solucion:
   s1: 
-    tipoComunicacion: one-way
-    tipoComposicion: orquestacion
+    tipoComposicion: coreografia
   s2:
-    tipoComunicacion: req-resp
     tipoComposicion: orquestacion
     
 logging:
