--- a/enriquecedor/enriquecedor-docker.yml
+++ b/enriquecedor/enriquecedor-docker.yml
@@ -23,8 +23,9 @@ spring:
     
 enricher: 
   s2: 
-    usuario: proygrado
-    password: proygrado2019
+    paso2:
+      usuario: proygrado
+      password: proygrado2019
     
 logging:
   config: ${configserver.discovered.uri}/logback/default/master/logback-spring-docker.xml
