se agrega clienteWSDL para solucion s1

--- a/conectorSalida/conectorSalida-docker.yml
+++ b/conectorSalida/conectorSalida-docker.yml
@@ -22,15 +22,13 @@ spring:
             maxAttempts: 1
             
 conectorSalida:
+  s1:
+    clienteWSDL: http://clientefinalsoap:9002/ws/empresas.wsdl
+    requestParam1:  razonSocial
   s2:
     clienteWSDL: http://clientefinalsoap:9002/ws/empresas.wsdl
     requestParam1:  razonSocial
             
-solucion:
-  s1: 
-    tipoComunicacion: one-way
-  s2:
-    tipoComunicacion: req-resp
   
     
 logging:
