--- a/conectorSalida/conectorSalida.yml
+++ b/conectorSalida/conectorSalida.yml
@@ -22,9 +22,14 @@ spring:
             maxAttempts: 1
             
 conectorSalida:
+  s1:
+    clienteWSDL: http://localhost:9002/ws/empresas.wsdl
+    requestParam1:  razonSocial
   s2:
     clienteWSDL: http://localhost:9002/ws/empresas.wsdl
     requestParam1:  razonSocial
+    
+  
             
 #solucion:
 #  s1: 
